<resources>
    <string name="app_name">WhacAMole</string>
    <string name="_0">0</string>
    <string name="streak">Streak:</string>
    <string name="points">Points:</string>
    <string name="textview9">TextView</string>
    <string name="textview8">TextView</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="highest_score">Highest Score</string>
    <string name="highest_streak">Highest Streak</string>
    <string name="textview3">TextView</string>
    <string name="whac_a_mole">WHAC - A - MOLE</string>
    <string name="play">PLAY!</string>
    <string name="button2">Button</string>
    <string name="todo2">TODO2</string>
    <string name="buildversion">Build: 0.10</string>
    <string name="paused">PAUSED!</string>
    <string name="todo3">Life</string>
    <string name="wintext">GAME OVER!</string>
    <string name="endingStreak">Streak:</string>
    <string name="endingScore">Score:</string>
    <string name="returnscreen">Return To Title</string>
    <string name="results">Final Results:</string>
    <string name="endscreenmole">endmole</string>
    <string name="sharebutton">shareplz</string>
    <string name="facebook_app_id">1199967106811953</string>
</resources>
